// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleListItemTests renders correctly after OnClick 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <h1
        class="title"
      >
        The Statue of Liberty's torch heads to new museum
      </h1>
      <div>
        <p
          class="shortText"
        >
          The Statue of Liberty's original torch is getting a new home
           
        </p>
        <time
          class="displyDate"
        >
          November 22nd 2018, 7:12 am
           
        </time>
        <br />
        <br />
      </div>
      <button
        class="button"
      >
        Show less
      </button>
    </article>
  </li>
</div>
`;

exports[`ArticleListItemTests renders correctly before OnClick 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <h1
        class="title"
      >
        The Statue of Liberty's torch heads to new museum
      </h1>
      <button
        class="button"
      >
        Show more
      </button>
    </article>
  </li>
</div>
`;
